--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
 		    <!-- <version>4.2.1</version> -->
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20210307</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
