--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 ms.client_id = [client_id]
 ms.client_secret = [client_secret]
 ms.redirect_uri = http://localhost:8080/msauthresponse
-ms.scope = openid offline_access mail.read Team.ReadBasic.All Chat.ReadBasic Chat.Read
+ms.scope = openid offline_access mail.read Team.ReadBasic.All Chat.ReadBasic Chat.ReadWrite
+ms.notification.receiver = https access to the server (ex. https://_____.ngrok.io/msnotification)
