--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 ms.client_id = [client_id]
 ms.client_secret = [client_secret]
 ms.redirect_uri = http://localhost:8080/msauthresponse
-ms.scope = openid offline_access mail.read Team.ReadBasic.All Chat.ReadWrite Channel.ReadBasic.All ChannelMessage.Read.All ChannelMessage.Send
+ms.scope = openid offline_access mail.read Team.ReadBasic.All Chat.ReadWrite Channel.ReadBasic.All ChannelMessage.Read.All ChannelMessage.Send Files.Read
 ms.notification.receiver = https access to the server (ex. https://_____.ngrok.io/msnotification)
 ms.webhooks.enabled = true
+# if <> null, downloads chat attachments to local dir
+ms.chat.attachments.local.dir = /tmp/attachments
+
 # NOTE: ChannelMessage.Read.All needs admin approval.
 # When an admin log in, the browser tells him to grant some privilege to the whole organization.
 # After admin's approval every user can log-in into the application   
